--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -6,6 +6,10 @@
       transform: translateY(-50%);
       width: 40%;
       max-height: 90%;
+      @media screen and (max-width: 480px) {
+          left: 23%;
+          width: 90%;
+      }
     }
   
     h1 {
@@ -15,6 +19,11 @@
       margin: 0;
       font-family: 'Coolvetica';
       font-weight: 400;
+
+      @media screen and (max-width: 480px) {
+        font-size: 44px;
+        line-height: 42px;
+    }
   
       &:before {
         content: '<h1>';
@@ -25,6 +34,9 @@
         margin-top: -40px;
         left: -15px;
         opacity: 0.6;
+        @media screen and (max-width: 480px) {
+          left: -10px;
+      }
       }
   
       &:after {
@@ -37,6 +49,10 @@
         margin-left: 20px;
         animation: fadeIn 1s 1.7s backwards;
         opacity: 0.6;
+        @media screen and (max-width: 480px) {
+          margin-top: 50px;
+          margin-left: -34px;
+      }
       }
   
       img {
@@ -49,6 +65,10 @@
         animation-delay: 1.4s;
       }
     }
+
+    .nowrap {
+      white-space: nowrap ;
+    }
   
     h2 {
       color: #8d8d8d;
@@ -58,6 +78,10 @@
       font-family: sans-serif;
       letter-spacing: 3px;
       animation: fadeIn 1s 1.8s backwards;
+      @media screen and (max-width: 480px) {
+        margin-top: 70px;
+        width: 70%;
+    }
     }
   
     .flat-button {
