--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -53,6 +53,11 @@
       vertical-align: middle;
       display: table-cell;
       max-height: 90%;
+      @media screen and (max-width: 480px) {
+        width: 76%;
+        top: 47%;
+        left: 22%
+    }
   
       h1 {
         font-size: 53px;
@@ -63,6 +68,11 @@
         position: relative;
         margin-bottom: 40px;
         left: -10px;
+        @media screen and (max-width: 480px) {
+          font-size: 40px;
+          left: 10px;
+
+      }
   
         &:before {
           content: '<h1>';
@@ -74,6 +84,9 @@
           left: -10px;
           opacity: 0.6;
           line-height: 18px;
+          @media screen and (max-width: 480px) {
+            left: -14px;
+        }
         }
   
         &:after {
@@ -87,6 +100,9 @@
           bottom: -20px;
           margin-left: 20px;
           opacity: 0.6;
+          @media screen and (max-width: 480px) {
+            left: -22px;
+        }
         }
       }
   
